[gd_scene load_steps=3 format=2]

[ext_resource path="res://StageEdge.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 400, 4 )

[node name="StageEdge" type="Node2D"]
script = ExtResource( 1 )

[node name="enter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enter"]
rotation = 1.57079
shape = SubResource( 1 )
one_way_collision_margin = 2.0
[connection signal="body_entered" from="enter" to="." method="_on_enter_body_entered"]
[connection signal="body_exited" from="enter" to="." method="_on_enter_body_exited"]
